--- a/index.html
+++ b/index.html
@@ -21,19 +21,29 @@
     <!-- Верхняя линия-->
     <header class="header">
       <div class="container main-header">
-        <a href="./index.html" class="logo"> <span class="logo-span">Web</span>Studio</a>
+        <a href="./index.html" class="logo">
+          <span class="logo-span">Web</span>Studio</a
+        >
         <nav>
           <ul class="site-nav list">
-            <li class="itim"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="itim"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="itim">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="itim">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
             <li class="itim"><a href="" class="link">Кнтакты</a></li>
           </ul>
         </nav>
         <ul class="site-phone list">
-          <li class="itim">
-            <a href="maito:info@devstudio.com " class="link">info@devstudio.com </a>
+          <li class="item">
+            <a href="maito:info@devstudio.com " class="link mail"
+              >info@devstudio.com
+            </a>
           </li>
-          <li class="itim"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -53,28 +63,32 @@
           <h2 hidden>Особенности</h2>
           <!-- скритий логічний заголовок -->
           <ul class="list">
-            <li class="section-itim">
+            <li class="section-item antenna">
               <h3 class="section-titel">Внимание к деталям</h3>
               <p class="text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
               </p>
             </li>
-            <li class="section-itim">
+            <li class="section-item clock">
               <h3 class="section-titel">Пунктуальность</h3>
               <p class="text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
               </p>
             </li>
-            <li class="section-itim">
+            <li class="section-item diagram">
               <h3 class="section-titel">Планирование</h3>
               <p class="text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
               </p>
             </li>
-            <li class="section-itim">
+            <li class="section-item astronaut">
               <h3 class="section-titel">Современные технологии</h3>
               <p class="text">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
               </p>
             </li>
           </ul>
@@ -85,9 +99,15 @@
         <div class="container">
           <h2 class="subject">Чем мы занимаемся</h2>
           <ul class="work list">
-            <li class="itim"><img src="./images/img1.jpg" alt="projekt" width="370" /></li>
-            <li class="itim"><img src="./images/img2.jpg" alt="design" width="370" /></li>
-            <li class="itim"><img src="./images/img3.jpg" alt="stylistics" width="370" /></li>
+            <li class="itim">
+              <img src="./images/img1.jpg" alt="projekt" width="370" />
+            </li>
+            <li class="itim">
+              <img src="./images/img2.jpg" alt="design" width="370" />
+            </li>
+            <li class="itim">
+              <img src="./images/img3.jpg" alt="stylistics" width="370" />
+            </li>
           </ul>
         </div>
       </section>
@@ -97,7 +117,11 @@
           <h2 class="subject">Наша команда</h2>
           <ul class="team list">
             <li class="itim">
-              <img src="./images/imgphoto1.jpg" alt="Igor Demyanenko" width="270" />
+              <img
+                src="./images/imgphoto1.jpg"
+                alt="Igor Demyanenko"
+                width="270"
+              />
               <div class="card-desc">
                 <h3 class="subject-titel">Игорь Демьяненко</h3>
                 <p class="subject-desc" lang="en">Product Designer</p>
@@ -111,14 +135,22 @@
               </div>
             </li>
             <li class="itim">
-              <img src="./images/imgphoto3.jpg" alt="Nike Tarasov" width="270" />
+              <img
+                src="./images/imgphoto3.jpg"
+                alt="Nike Tarasov"
+                width="270"
+              />
               <div class="card-desc">
                 <h3 class="subject-titel">Николай Тарасов</h3>
                 <p class="subject-desc" lang="en">Marketing</p>
               </div>
             </li>
             <li class="itim">
-              <img src="./images/imgphoto4.jpg" alt="Mikhail Ermakov" width="270" />
+              <img
+                src="./images/imgphoto4.jpg"
+                alt="Mikhail Ermakov"
+                width="270"
+              />
               <div class="card-desc">
                 <h3 class="subject-titel">Михаил Ермаков</h3>
                 <p class="subject-desc" lang="en">UI Designer</p>
@@ -131,7 +163,9 @@
     <!--Подвал-->
     <footer class="footer">
       <div class="container">
-        <a href="/index.html" class="logo footer"><span class="logo-span">Web</span>Studio</a>
+        <a href="/index.html" class="logo footer"
+          ><span class="logo-span">Web</span>Studio</a
+        >
         <address>
           <ul class="site-footer list">
             <li class="item">
@@ -144,10 +178,14 @@
               >
             </li>
             <li class="item">
-              <a href="maito:info@devstudio.com " class="footer-phone">info@devstudio.com </a>
+              <a href="maito:info@devstudio.com " class="footer-phone"
+                >info@devstudio.com
+              </a>
             </li>
             <li class="item">
-              <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="footer-phone"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
