--- a/portfolio.html
+++ b/portfolio.html
@@ -21,19 +21,27 @@
     <!-- Верхняя линия-->
     <header class="header">
       <div class="container main-header">
-        <a href="./index.html" class="logo"> <span class="logo-span">Web</span>Studio</a>
+        <a href="./index.html" class="logo">
+          <span class="logo-span">Web</span>Studio</a
+        >
         <nav>
           <ul class="site-nav list">
             <li class="itim"><a href="./index.html" class="link">Студия</a></li>
-            <li class="itim"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="itim">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
             <li class="itim"><a href="" class="link">Кнтакты</a></li>
           </ul>
         </nav>
         <ul class="site-phone list">
-          <li class="itim">
-            <a href="maito:info@devstudio.com " class="link">info@devstudio.com </a>
+          <li class="item">
+            <a href="maito:info@devstudio.com " class="link"
+              >info@devstudio.com
+            </a>
           </li>
-          <li class="itim"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -42,16 +50,30 @@
         <h1 hidden>filter</h1>
         <div class="container">
           <ul class="filter list">
-            <li class="item"><button type="button" class="btn current">Все</button></li>
-            <li class="item"><button type="button" class="btn">Веб-сайт</button></li>
-            <li class="item"><button type="button" class="btn">Приложения</button></li>
-            <li class="item"><button type="button" class="btn">Дизайн</button></li>
-            <li class="item"><button type="button" class="btn">Маркетинг</button></li>
+            <li class="item">
+              <button type="button" class="btn current">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Веб-сайт</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Маркетинг</button>
+            </li>
           </ul>
           <ul class="projekt list">
             <li class="item">
               <a href="" class="element">
-                <img src="./images/portfolio1.jpg " alt="tehnocryak" width="370" />
+                <img
+                  src="./images/portfolio1.jpg "
+                  alt="tehnocryak"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Технокряк</h2>
                   <p class="lead desc">веб-сайт</p>
@@ -66,14 +88,20 @@
                   width="370"
                 />
                 <div class="item-desc">
-                  <h2 class="heading subtitel">Постер New Orlean vs Golden Star</h2>
+                  <h2 class="heading subtitel">
+                    Постер New Orlean vs Golden Star
+                  </h2>
                   <p class="lead desc">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio3.jpg " alt="Restaurant Seafood" width="370" />
+                <img
+                  src="./images/portfolio3.jpg "
+                  alt="Restaurant Seafood"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Ресторан Seafood</h2>
                   <p class="lead desc">Приложение</p>
@@ -82,7 +110,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio4.jpg " alt="projekt Prime" width="370" />
+                <img
+                  src="./images/portfolio4.jpg "
+                  alt="projekt Prime"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Проект Prime</h2>
                   <p class="lead desc">Маркетинг</p>
@@ -91,7 +123,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio5.jpg " alt="projekt Boxes" width="370" />
+                <img
+                  src="./images/portfolio5.jpg "
+                  alt="projekt Boxes"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Проект Boxes</h2>
                   <p class="lead desc">Приложение</p>
@@ -100,7 +136,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio6.jpg " alt="Inspiration has no Borders" width="370" />
+                <img
+                  src="./images/portfolio6.jpg "
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Inspiration has no Borders</h2>
                   <p class="lead desc">Веб-сайт</p>
@@ -109,7 +149,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio7.jpg " alt="Limited Edition" width="370" />
+                <img
+                  src="./images/portfolio7.jpg "
+                  alt="Limited Edition"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Издание Limited Edition</h2>
                   <p class="lead desc">Дизайн</p>
@@ -118,7 +162,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio8.jpg " alt="projekt LAB" width="370" />
+                <img
+                  src="./images/portfolio8.jpg "
+                  alt="projekt LAB"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Проект LAB</h2>
                   <p class="lead desc">Маркетинг</p>
@@ -127,7 +175,11 @@
             </li>
             <li class="item">
               <a href="">
-                <img src="./images/portfolio9.jpg " alt="Growing Business" width="370" />
+                <img
+                  src="./images/portfolio9.jpg "
+                  alt="Growing Business"
+                  width="370"
+                />
                 <div class="item-desc">
                   <h2 class="heading subtitel">Growing Business</h2>
                   <p class="lead desc">Приложение</p>
@@ -141,7 +193,9 @@
     <!--Подвал-->
     <footer class="footer">
       <div class="container">
-        <a href="/index.html" class="logo footer"><span class="logo-span">Web</span>Studio</a>
+        <a href="/index.html" class="logo footer"
+          ><span class="logo-span">Web</span>Studio</a
+        >
         <address>
           <ul class="site-footer list">
             <li class="item">
@@ -154,10 +208,14 @@
               >
             </li>
             <li class="item">
-              <a href="maito:info@devstudio.com " class="footer-phone">info@devstudio.com </a>
+              <a href="maito:info@devstudio.com " class="footer-phone"
+                >info@devstudio.com
+              </a>
             </li>
             <li class="item">
-              <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="footer-phone"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
