--- a/index.html
+++ b/index.html
@@ -37,12 +37,20 @@
         </nav>
         <ul class="site-phone list">
           <li class="item">
-            <a href="maito:info@devstudio.com " class="link mail"
-              >info@devstudio.com
+            <a href="maito:info@devstudio.com " class="link mail">
+              <svg class="mail-icon">
+                <use href="./images/sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link mail">
+              <svg class="mail-icon">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -116,7 +124,7 @@
         <div class="container">
           <h2 class="subject">Наша команда</h2>
           <ul class="team list">
-            <li class="itim">
+            <li class="item">
               <img
                 src="./images/imgphoto1.jpg"
                 alt="Igor Demyanenko"
@@ -125,16 +133,80 @@
               <div class="card-desc">
                 <h3 class="subject-titel">Игорь Демьяненко</h3>
                 <p class="subject-desc" lang="en">Product Designer</p>
+                <div class="socials">
+                  <ul class="socials-item list">
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-twich"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-            <li class="itim">
+            <li class="item">
               <img src="./images/imgphoto2.jpg" alt="Olga Repina" width="270" />
               <div class="card-desc">
                 <h3 class="subject-titel">Ольга Репина</h3>
                 <p class="subject-desc" lang="en">Frontend Developer</p>
+                <div class="socials">
+                  <ul class="socials-item list">
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-twich"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-            <li class="itim">
+            <li class="item">
               <img
                 src="./images/imgphoto3.jpg"
                 alt="Nike Tarasov"
@@ -143,9 +215,41 @@
               <div class="card-desc">
                 <h3 class="subject-titel">Николай Тарасов</h3>
                 <p class="subject-desc" lang="en">Marketing</p>
+                <div class="socials">
+                  <ul class="socials-item list">
+                    <li class="item">
+                      <button class="button-icon" aria-label="insta">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-twich"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
-            <li class="itim">
+            <li class="item">
               <img
                 src="./images/imgphoto4.jpg"
                 alt="Mikhail Ermakov"
@@ -154,41 +258,162 @@
               <div class="card-desc">
                 <h3 class="subject-titel">Михаил Ермаков</h3>
                 <p class="subject-desc" lang="en">UI Designer</p>
+                <div class="socials">
+                  <ul class="socials-item list">
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-twich"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="item">
+                      <button class="button-icon">
+                        <svg class="soc-icon">
+                          <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="subject">Постоянные клиенты</h2>
+          <div class="client">
+            <ul class="list">
+              <li class="item">
+                <a class="link-icon" href="">
+                  <svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-yaco"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="link-icon" href=""
+                  ><svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-taglinehere"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="link-icon" href="">
+                  <svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-company"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="link-icon" href="">
+                  <svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-forestpeters"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="link-icon" href="">
+                  <svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-brand"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="link-icon" href="">
+                  <svg class="client-icon">
+                    <use href="./images/sprite.svg#icon-tagline"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <div class="container">
-        <a href="/index.html" class="logo footer"
-          ><span class="logo-span">Web</span>Studio</a
-        >
-        <address>
-          <ul class="site-footer list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/yVWfpNULPEzSVUcbA"
-                target="_blank"
-                rel="noreferrer nofollow noopener"
-                class="footer-text"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a href="maito:info@devstudio.com " class="footer-phone"
-                >info@devstudio.com
-              </a>
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="footer-phone"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+      <div class="container foot">
+        <div class="site-foot">
+          <a href="/index.html" class="logo footer"
+            ><span class="logo-span">Web</span>Studio</a
+          >
+          <address>
+            <ul class="site-footer list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/yVWfpNULPEzSVUcbA"
+                  target="_blank"
+                  rel="noreferrer nofollow noopener"
+                  class="footer-text"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="maito:info@devstudio.com " class="footer-phone"
+                  >info@devstudio.com
+                </a>
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="footer-phone"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="soc-foot">
+          <h3 class="titel">присоединяйтесь</h3>
+          <div class="socials">
+            <ul class="socials-item list">
+              <li class="item">
+                <button class="button-icon foot-icon">
+                  <svg class="soc-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="item">
+                <button class="button-icon foot-icon">
+                  <svg class="soc-icon">
+                    <use href="./images/sprite.svg#icon-twich"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="item">
+                <button class="button-icon foot-icon">
+                  <svg class="soc-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="item">
+                <button class="button-icon foot-icon">
+                  <svg class="soc-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
