--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container">
           <h2 class="subject">Наша команда</h2>
           <ul class="team list">
-            <li class="item">
+            <li class="item item-desc">
               <img
                 src="./images/imgphoto1.jpg"
                 alt="Igor Demyanenko"
@@ -136,38 +136,38 @@
                 <div class="socials">
                   <ul class="socials-item list">
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-twich"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
               </div>
             </li>
-            <li class="item">
+            <li class="item item-desc">
               <img src="./images/imgphoto2.jpg" alt="Olga Repina" width="270" />
               <div class="card-desc">
                 <h3 class="subject-titel">Ольга Репина</h3>
@@ -175,38 +175,38 @@
                 <div class="socials">
                   <ul class="socials-item list">
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-twich"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
               </div>
             </li>
-            <li class="item">
+            <li class="item item-desc">
               <img
                 src="./images/imgphoto3.jpg"
                 alt="Nike Tarasov"
@@ -218,38 +218,38 @@
                 <div class="socials">
                   <ul class="socials-item list">
                     <li class="item">
-                      <button class="button-icon" aria-label="insta">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-twich"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                     <li class="item">
-                      <button class="button-icon">
+                      <a class="socials-icon" href="">
                         <svg class="soc-icon">
                           <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
-                      </button>
+                      </a>
                     </li>
                   </ul>
                 </div>
               </div>
             </li>
-            <li class="item">
+            <li class="item item-desc">
               <img
                 src="./images/imgphoto4.jpg"
                 alt="Mikhail Ermakov"
@@ -258,38 +258,37 @@
               <div class="card-desc">
                 <h3 class="subject-titel">Михаил Ермаков</h3>
                 <p class="subject-desc" lang="en">UI Designer</p>
-                <div class="socials">
-                  <ul class="socials-item list">
-                    <li class="item">
-                      <button class="button-icon">
-                        <svg class="soc-icon">
-                          <use href="./images/sprite.svg#icon-instagram"></use>
-                        </svg>
-                      </button>
-                    </li>
-                    <li class="item">
-                      <button class="button-icon">
-                        <svg class="soc-icon">
-                          <use href="./images/sprite.svg#icon-twich"></use>
-                        </svg>
-                      </button>
-                    </li>
-                    <li class="item">
-                      <button class="button-icon">
-                        <svg class="soc-icon">
-                          <use href="./images/sprite.svg#icon-facebook"></use>
-                        </svg>
-                      </button>
-                    </li>
-                    <li class="item">
-                      <button class="button-icon">
-                        <svg class="soc-icon">
-                          <use href="./images/sprite.svg#icon-linkedin"></use>
-                        </svg>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
+
+                <ul class="socials-item list">
+                  <li class="item">
+                    <a class="socials-icon" href="">
+                      <svg class="soc-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="socials-icon" href="">
+                      <svg class="soc-icon">
+                        <use href="./images/sprite.svg#icon-twich"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="socials-icon" href="">
+                      <svg class="soc-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="socials-icon" href="">
+                      <svg class="soc-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -384,32 +383,32 @@
           <div class="socials">
             <ul class="socials-item list">
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-twich"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </button>
+                </a>
               </li>
             </ul>
           </div>
