--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
         <nav>
           <ul class="site-nav list">
             <li class="itim">
-              <a href="./index.html" class="link current">Студия</a>
+              <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="itim">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
             <li class="itim"><a href="" class="link">Кнтакты</a></li>
           </ul>
@@ -78,26 +78,26 @@
           </ul>
           <ul class="projekt list">
             <li class="item">
-              <a href="" class="element">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio1.jpg "
                   alt="tehnocryak"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Технокряк</h2>
                   <p class="lead desc">веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio2.jpg "
                   alt="post New Orlean vs Golden Star"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">
                     Постер New Orlean vs Golden Star
                   </h2>
@@ -106,91 +106,91 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio3.jpg "
                   alt="Restaurant Seafood"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Ресторан Seafood</h2>
                   <p class="lead desc">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio4.jpg "
                   alt="projekt Prime"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Проект Prime</h2>
                   <p class="lead desc">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio5.jpg "
                   alt="projekt Boxes"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Проект Boxes</h2>
                   <p class="lead desc">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio6.jpg "
                   alt="Inspiration has no Borders"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Inspiration has no Borders</h2>
                   <p class="lead desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio7.jpg "
                   alt="Limited Edition"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Издание Limited Edition</h2>
                   <p class="lead desc">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio8.jpg "
                   alt="projekt LAB"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Проект LAB</h2>
                   <p class="lead desc">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="element" href="">
                 <img
                   src="./images/portfolio9.jpg "
                   alt="Growing Business"
                   width="370"
                 />
-                <div class="item-desc">
+                <div class="item-projekt">
                   <h2 class="heading subtitel">Growing Business</h2>
                   <p class="lead desc">Приложение</p>
                 </div>
@@ -236,32 +236,32 @@
           <div class="socials">
             <ul class="socials-item list">
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-twich"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                </button>
+                </a>
               </li>
               <li class="item">
-                <button class="button-icon foot-icon">
+                <a class="socials-icon foot-icon" href="">
                   <svg class="soc-icon">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
-                </button>
+                </a>
               </li>
             </ul>
           </div>
